# numprint

./: README.md  readme.md
documentation/: fixed_width.txt  idfk.txt  idk.txt  rant.txt
python/: pyproject.toml
python/src/numprint/: fixed_width.py
python/src/numprint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/numrepr/: __init__.py  base.py  defaults.py  double_scientific.py  fixed_width.py  matrix.py  misc.py  si_infix.py  tensor.py
python/src/numrepr.egg-info/: PKG-INFO  SOURCES.txt
